--- a/composer.json
+++ b/composer.json
@@ -45,12 +45,8 @@
     },
     "authors": [
         {
-            "name": "Peter Dietrich",
-            "email": "xosofox@gmail.com"
-        },
-        {
-            "name": "Nicolas PHILIPPE",
-            "email": "nikophil@gmail.com"
+            "name": "Wenke Chen",
+            "email": "wencochen@gmail.com"
         }
     ]
 }
